--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Document</title>
 </head>
 <body>
-  <div class="bak" >
-     <div class="para"><p>"اطياف الغروب"</p></div> 
-     <div class="ima">
+  <div class="bak   col-lg-12  col-md-6 col-sm-4" >
+     <div class="  col-lg-12  col-md-6   col-sm-4  para"     ><p>"اطياف الغروب"</p></div> 
+     <div class=" col-lg-12  col-md-6  col-sm-4  ima">
         <style>
             img:hover {
               -webkit-transform: scaleX(-1);
@@ -31,9 +31,9 @@
     </div>
 
     </div>
-    <div class="lightbox-dark"></div>
-    <div class="lightbox">
-        <div class="close-btn">X</div>
+    <div class=" col-lg-12  col-md-6   col-sm-4 lightbox-dark"></div>
+    <div class=" col-lg-12  col-md-6  col-sm-4   lightbox">
+        <div class=" col-lg-12  col-md-6  col-sm-4 close-btn">X</div>
        
 
         <img id="light-img" src="images/8.jpg" class="big-img">
